--- a/src/main/features/dashboard/views/macro/claimStatus/claimantResponse.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/claimantResponse.njk
@@ -5,13 +5,13 @@
 {% endmacro %}
 
 {% macro claimantRejectedDefendantAsCompanyOrOrganisationResponseDetailedStatus(claim) %}
-<h2 class="heading-small">You need to send the defendant's financial details to the court</h2>
+<h2 class="heading-small">{{ t('You need to send the defendant’s financial details to the court') }}</h2>
 
-<p>Make sure you include your claim number: {{claim.claimNumber}}.</p>
-<p>The court will review the details to see if the defendant can afford your repayment plan.</p>
+<p>{{ t('Make sure you include your claim number: {{ claim.claimNumber }}.') }}</p>
+<p>{{ t('The court will review the details to see if the defendant can afford your repayment plan.') }}</p>
 
 <h3 class="heading-small">Use this address</h3>
-<p>The defendant should have sent you the details - send them to:</p>
+<p>{{ t('The defendant should have sent you the details - send them to:') }}</p>
 <p>
   Civil Money Claims<br/>
   St. Katharine's House<br/>
