--- a/src/main/features/dashboard/views/macro/claimStatus/claimantResponse.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/claimantResponse.njk
@@ -10,10 +10,10 @@
 
 <h2 class="heading-small">{{ t('You need to send the defendant’s financial details to the court') }}</h2>
 
-<p>{{ t('Make sure you include your claim number: {{ claimNumber }}.') }}</p>
+<p>{{ t('Make sure you include your claim number: {{ claimNumber }}.', { claimNumber: claimNumber }) }}</p>
 <p>{{ t('The court will review the details to see if the defendant can afford your repayment plan.') }}</p>
 
-<h3 class="heading-small">Use this address</h3>
+<h3 class="heading-small">{{ t('Use this address') }}</h3>
 <p>{{ t('The defendant should have sent you the details - send them to:') }}</p>
 <p>
   Civil Money Claims<br/>
@@ -23,11 +23,11 @@
   NN1 2LH
 </p>
 
-<p>Or email them to moneyclaims@hmcts.gsi.gov.uk</p>
-<h4 class="heading-small">If the court believes the defendant can afford your plan</h4>
-<p>A County Court Judgment (CCJ) will be issued. This requires the defendant to pay according to the
-  terms of the plan.
-<h4 class="heading-small">If the court believes the defendant can not afford your plan</h4>
-<p>The court will set its own repayment terms and issue a CCJ.</p>
+<p>{{ t('Or email them to moneyclaims@hmcts.gsi.gov.uk') }}</p>
+<h4 class="heading-small">{{ t('If the court believes the defendant can afford your plan') }}</h4>
+<p>{{ t('A County Court Judgment (CCJ) will be issued. This requires the defendant to pay according to the
+  terms of the plan.') }}
+<h4 class="heading-small">{{ t('If the court believes the defendant can not afford your plan') }}</h4>
+<p>{{ t('The court will set its own repayment terms and issue a CCJ.') }}</p>
 
 {% endmacro %}
