--- a/src/main/features/ccj/views/redetermination.njk
+++ b/src/main/features/ccj/views/redetermination.njk
@@ -1,19 +1,33 @@
 {% extends "layout.njk" %}
 
+{% if madeBy === MadeBy.CLAIMANT.value %}
 {% set heading = 'Why do you believe the defendant can repay you sooner?' %}
+{% else %}
+{% set heading = 'Ask a judge to make a repayment plan' %}
+{% set textAreaLabel = 'Why do you feel this plan is not affordable?' %}
+{% endif %}
 
-{% from "form.njk" import saveAndContinueButton, csrfProtection, errorSummary, textArea %}
+{% from "form.njk" import saveAndContinueButton, submitButton, csrfProtection, errorSummary, textArea %}
+{% from "repaymentPlanBlock.njk" import repaymentPlanBlock %}
 
 {% block content %}
-  <div class="column-two-thirds">
+<div class="column-two-thirds">
 
-    <form method="post" >
-      {{ csrfProtection(csrf) }}
+  <form method="post">
+    {{ csrfProtection(csrf) }}
 
-      {{ textArea(name = 'text', form = form, rows = 5, columns=18) }}
+    {% if madeBy === MadeBy.DEFENDANT.value %}
+    {{ repaymentPlanBlock( heading = 'The claimant has proposed this repayment plan', repaymentPlan = repaymentPlan ) }}
+    {% endif %}
 
-      {{ saveAndContinueButton() }}
-    </form>
+    {{ textArea(label = textAreaLabel, name = 'text', form = form, rows = 5, columns=18) }}
 
-  </div>
+    {% if madeBy === MadeBy.CLAIMANT.value  %}
+    {{ saveAndContinueButton() }}
+    {% else %}
+    {{ submitButton(label = heading, id = 'saveAndContinue') }}
+    {% endif %}
+  </form>
+
+</div>
 {% endblock %}
