--- a/src/main/features/ccj/views/repayment-plan-summary.njk
+++ b/src/main/features/ccj/views/repayment-plan-summary.njk
@@ -18,7 +18,7 @@
       {% if claim.isEligibleForReDetermination() %}
 
         <p>{{ t('If you think the defendant can repay you sooner, you can ') }} <a
-            href="{{ CCJPaths.redeterminationPage.evaluateUri({ externalId: claim.externalId }) }}">{{ t('ask a judge to make a new repayment plan.') }}</a>
+            href="{{ CCJPaths.redeterminationPage.evaluateUri({ externalId: claim.externalId, madeBy: madeBy }) }}">{{ t('ask a judge to make a new repayment plan.') }}</a>
         </p>
       {% endif %}
     </div>
