Added line about timeline to defendant journey

--- a/src/main/features/response/views/your-defence.njk
+++ b/src/main/features/response/views/your-defence.njk
@@ -23,6 +23,8 @@
 
         <p>{{ t('You should also say if you accept any parts of the claim.') }}</p>
 
+        <p>{{ t('Don’t give us a detailed timeline - we’ll ask for that separately.') }}</p>
+
         {{ textArea(name = 'text', form = form, rows = 10) }}
 
         <div class="panel panel-border-wide">
