--- a/src/main/features/dashboard/views/macro/claimStatus/admissionByCCJClaimant.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/admissionByCCJClaimant.njk
@@ -1,5 +1,6 @@
 {% from "internalLink.njk" import internalLink %}
 {% from "form.njk" import linkButton %}
+{% from "./paidInFullClaimant.njk" import paidInFullClaimantButtonClaimDetails %}
 
 {% macro admissionByCCJClaimantDashboard(claim) %}
   {{ t('A County Court Judgment has been issued.') }}
@@ -11,6 +12,6 @@
       { defendantName: claim.claimData.defendant.name }) }}</p>
   <p>{{ internalLink('View the repayment plan', CCJPaths.repaymentPlanSummaryPage.evaluateUri({ externalId: claim.externalId })) }}</p>
   <p> {{ t('When you’ve been paid in full, you need to let us know.') }} </p>
-  <a href="{{ DashboardPaths.datePaidPage.evaluateUri({ externalId: claim.externalId }) }}" class="button button-secondary">Tell us you've been paid</a>
+  {{ paidInFullClaimantButtonClaimDetails(claim,'Tell us you’ve been paid') }}
 {% endmacro %}
 ccjGuard.ts
