--- a/src/main/features/claimant-response/views/defendants-response.njk
+++ b/src/main/features/claimant-response/views/defendants-response.njk
@@ -35,6 +35,7 @@
   <p>{{ t('"{{ reason }}"', { reason: reason }) }}</p>
 {% endmacro %}
 
+
 {% macro timelineFragment(timeline) %}
   <table>
     <thead>
@@ -54,19 +55,55 @@
   </table>
 {% endmacro %}
 
+{% macro paymentInformationFragment(paymentDeclaration) %}
+  <h3 class="heading-small">{{ t('When they paid this amount') }}</h3>
+  <p>{{ paymentDeclaration.paidDate | date }}</p>
+
+  <h3 class="heading-small">{{ t('How they say they paid') }}</h3>
+  <p>{{ paymentDeclaration.explanation }}</p>
+{% endmacro %}
+
 {% block content %}
   <div class="grid-row">
     <div class="column-two-thirds">
-      {% if claim.response.responseType === ResponseType.FULL_ADMISSION.value %}
-        <p>{{ t('{{ defendantName }} admits they owe all the money you’ve claimed.', { defendantName: defendantName }) }}</p>
-        <p>
-          {{
-            paymentIntentionFragment(
+
+      {% if alreadyPaid %}
+
+
+        {% if partiallyPaid %}
+          <p>{{ t('{{ defendantName }} said they paid you {{ amount }}. They said this is all they owe, not the amount you claimed.', { defendantName: defendantName, amount: claim.response.amount | numeral }) }}</p>
+
+          {{ paymentInformationFragment(paymentDeclaration = claim.response.paymentDeclaration) }}
+
+          <h3
+            class="heading-small form-group-related">{{ t('Why they say they don’t owe the amount you claimed') }}</h3>
+          <p>{{ t('"{{ defence }}"', { defence: claim.response.defence }) }}</p>
+
+          {% if claim.response.timeline and claim.response.timeline.rows.length > 0 %}
+            <h3 class="heading-small form-group-related">{{ t('Their timeline of events') }}</h3>
+            {{ timelineFragment(claim.response.timeline) }}
+          {% endif %}
+
+          {% if claim.response.evidence and claim.response.evidence.comment %}
+            <h3 class="heading-small form-group-related">{{ t('They disagree with your evidence') }}</h3>
+            <p>{{ t('"{{ comment }}"', { comment: claim.response.evidence.comment }) }}</p>
+          {% endif %}
+        {% else %}
+          {{ t('{{ defendantName }} states they paid you {{ amount }}.', { defendantName: defendantName, amount: claim.totalAmountTillToday | numeral }) }}
+
+          {{ paymentInformationFragment(paymentDeclaration = claim.response.paymentDeclaration) }}
+
+        {% endif %}
+
+      {% else %}
+        {% if claim.response.responseType === ResponseType.FULL_ADMISSION.value %}
+          <p>{{ t('{{ defendantName }} admits they owe all the money you’ve claimed.', { defendantName: defendantName }) }}</p>
+          <p>
+            {{ paymentIntentionFragment(
               amount = undefined,
               paymentIntention = claim.response.paymentIntention
-            )
-          }}
-        </p>
+            ) }}
+          </p>
 
         {% if claim.response.paymentIntention.paymentOption === domain.PaymentOption.INSTALMENTS %}
           {{
@@ -77,10 +114,10 @@
           }}
         {% endif %}
 
-        {{ paymentDateExplanationBlock(claim.response.statementOfMeans.reason) }}
+          {{ paymentDateExplanationBlock(claim.response.statementOfMeans.reason) }}
         {{ financialDetailsBlock(claim, 'Their finances', 'See their financial details', 'form-group') }}
 
-      {% endif %}
+        {% endif %}
 
       {% if claim.response.responseType === ResponseType.PART_ADMISSION.value %}
         {% if page === 0 %}
@@ -90,21 +127,20 @@
               paymentIntentionFragment(
                 amount = claim.response.amount,
                 paymentIntention = claim.response.paymentIntention
-              )
-            }}
-          </p>
+              ) }}
+            </p>
 
-          <h2 class="heading-medium">{{ t('Their defence') }}</h2>
+            <h2 class="heading-medium">{{ t('Their defence') }}</h2>
 
-          <h3 class="heading-small form-group-related">{{ t('Why they don’t owe the amount claimed') }}</h3>
-          <p>{{ t('"{{ defence }}"', { defence: claim.response.defence }) }}</p>
+            <h3 class="heading-small form-group-related">{{ t('Why they don’t owe the amount claimed') }}</h3>
+            <p>{{ t('"{{ defence }}"', { defence: claim.response.defence }) }}</p>
 
-          {% if claim.response.timeline and claim.response.timeline.rows.length > 0 %}
-            <h3 class="heading-small form-group-related">{{ t('Their timeline of events') }}</h3>
-            <div class="form-group">
+            {% if claim.response.timeline and claim.response.timeline.rows.length > 0 %}
+              <h3 class="heading-small form-group-related">{{ t('Their timeline of events') }}</h3>
+              <div class="form-group">
               {{ timelineFragment(claim.response.timeline) }}
             </div>
-          {% endif %}
+            {% endif %}
 
           {% if claim.response.evidence and claim.response.evidence.comment %}
             <h3 class="heading-small form-group-related">{{ t('They disagree with your evidence') }}</h3>
@@ -113,23 +149,23 @@
         {% elseif page === 1 %}
           {% if claim.response.paymentIntention.paymentOption === domain.PaymentOption.INSTALMENTS %}
             {{
-            repaymentPlanBlock(
-              heading = 'How they want to pay',
-              repaymentPlan = claim.response.paymentIntention.repaymentPlan
-            )
-            }}
+              repaymentPlanBlock(
+                heading = 'How they want to pay',
+                repaymentPlan = claim.response.paymentIntention.repaymentPlan
+              )}}
+
           {% elseif claim.response.paymentIntention.paymentOption === domain.PaymentOption.BY_SPECIFIED_DATE %}
-            {{
-              paymentIntentionFragment(
+
+              {{paymentIntentionFragment(
                 amount = claim.response.amount,
                 paymentIntention = claim.response.paymentIntention
-              )
-            }}
-          {% endif %}
+              ) }}
+            {% endif %}
 
-          {{ paymentDateExplanationBlock(claim.response.statementOfMeans.reason) }}
+            {{ paymentDateExplanationBlock(claim.response.statementOfMeans.reason) }}
           {{ financialDetailsBlock(claim, 'Their finances', 'See their financial details', 'form-group') }}
 
+          {% endif %}
         {% endif %}
       {% endif %}
 
