--- a/src/main/features/claimant-response/views/accept-payment-method.njk
+++ b/src/main/features/claimant-response/views/accept-payment-method.njk
@@ -26,7 +26,7 @@
         {% endif %}
 
         {% if claim.claimData.defendant.type === 'company' %}
-          {% set hint = 'They’ll send you their financial details. You can use these to decide whether to to accept or reject their offer' %}
+          {% set hint = 'The defendant should have sent you their financial details. You’ll need to send them to us. We’ll use them to check if they can afford your plan' %}
         {% endif %}
 
         {{
