--- a/src/main/features/dashboard/views/macro/claimStatus/claimPartAdmissionClaimant.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/claimPartAdmissionClaimant.njk
@@ -21,38 +21,30 @@
     { amount: claim.response.amount | numeral }) }}
 {% endmacro %}
 
+
 {% macro claimPartAdmittedToOweForClaimantClaimDetails(claim) %}
   <div class="status-block">
+    <h2 class="heading-small">{{ t('The defendant has admitted they owe {{ amount }} ', { amount: claim.response.amount | numeral }) }}</h2>
+
+    {% if claim.response.paymentIntention.paymentOption === domain.PaymentOption.IMMEDIATELY %}
+      <p>{{ t('They said they don’t owe the full amount you claimed.') }}</p>
+      <p>{{ t('They’ve offered to pay the {{ amount }} immediately.', { amount: claim.response.amount | numeral }) }}</p>
+      <p>{{ t('They must make sure you have the money by {{ paymentDate }}. Any cheques or transfers should be clear in your account.',
+        { paymentDate: claim.response.paymentIntention.paymentDate | date }) }}</p>
+    {% elseif claim.response.paymentIntention.paymentOption === domain.PaymentOption.BY_SPECIFIED_DATE %}
+      <p>{{ t('They’ve offered to pay by {{ paymentDate }}.', { paymentDate: claim.response.paymentIntention.paymentDate | date }) }}</p>
+    {% elseif claim.response.paymentIntention.paymentOption === domain.PaymentOption.INSTALMENTS %}
+      <p>{{ t('They’ve offered to pay in instalments.') }}</p>
+    {% endif %}
 
     {% if claim.claimData.defendant.type === 'company' %}
-      {% if claim.response.paymentIntention.paymentOption === domain.PaymentOption.BY_SPECIFIED_DATE %}
-        <h2 class="heading-small">{{ t('The defendant has offered to pay by {{ paymentDate }} ', { paymentDate: claim.response.paymentIntention.paymentDate | date }) }}</h2>
-      {% endif %}
-
-      {% if claim.response.paymentIntention.paymentOption === domain.PaymentOption.INSTALMENTS %}
-          <p>{{ t('The defendant has offered to pay in instalments.') }}</p>
-          <h2 class="heading-small">{{ t('The defendant has offered to pay in instalments ') }}</h2>
-      {% endif %}
-
-      <p>{{ t('They’ll send you their financial details. You can use these to decide whether to to accept or reject their offer') }}</p>
+      <p>{{ t('They’ll send you their financial details. You can use these to decide whether to accept or reject what they say they owe') }}</p>
     {% endif %}
 
     {% if claim.claimData.defendant.type === 'individual' %}
-      <h2 class="heading-small">{{ t('The defendant has admitted they owe {{ amount }} ', { amount: claim.response.amount | numeral }) }}</h2>
-      {% if claim.response.paymentIntention.paymentOption === domain.PaymentOption.IMMEDIATELY %}
-        <p>{{ t('They said they don’t owe the full amount you claimed.') }}</p>
-        <p>{{ t('They’ve offered to pay the {{ amount }} immediately.', { amount: claim.response.amount | numeral }) }}</p>
-        <p>{{ t('They must make sure you have the money by {{ paymentDate }}. Any cheques or transfers should be clear in your account.',
-            { paymentDate: claim.response.paymentIntention.paymentDate | date }) }}</p>
-      {% elseif claim.response.paymentIntention.paymentOption === domain.PaymentOption.BY_SPECIFIED_DATE %}
-        <p>{{ t('They’ve offered to pay by {{ paymentDate }}.', { paymentDate: claim.response.paymentIntention.paymentDate | date }) }}</p>
-      {% elseif claim.response.paymentIntention.paymentOption === domain.PaymentOption.INSTALMENTS %}
-        <p>{{ t('They’ve offered to pay in instalments.') }}</p>
-      {% endif %}
-
       <p>{{ t('You can accept or reject their admission.') }}</p>
     {% endif %}
 
-    {{ viewAndRespondOffer(claim, 'View and respond to the offer') }}
+    {{ viewAndRespondOffer(claim, 'View and respond') }}
   </div>
 {% endmacro %}
