--- a/src/main/features/dashboard/views/macro/caseHistory.njk
+++ b/src/main/features/dashboard/views/macro/caseHistory.njk
@@ -55,7 +55,9 @@ ccjRequestedForDefendantClaimDetails %}
 claimantRejectedDefendantAsCompanyOrOrganisationResponseDetailedStatus %}
 
 {% from "./claimStatus/admissionByCCJClaimant.njk" import admissionByCCJClaimantClaimDetails %}
-{% from "./claimStatus/admissionByCCJDefendant.njk" import admissionByCCJDefendantClaimDetails %}
+{% from "./claimStatus/admissionByCCJDefendant.njk" import
+  admissionByCCJDefendantClaimDetails,
+  CCJByDeterminationDefendantClaimDetails %}
 {% from "./claimStatus/settlementAgreementDefendant.njk" import
   settlementAgreementSignedByClaimantDefendantClaimDetails,
   settlementAgreementSignedByBothDefendantClaimDetails,
@@ -129,6 +131,8 @@ claimantRejectedDefendantAsCompanyOrOrganisationResponseDetailedStatus %}
         {{ admissionByCCJDefendantClaimDetails(claim) }}
       {% elif state.status === ClaimStatus.CLAIMANT_ACCEPTED_ADMISSION or state.status === ClaimStatus.CLAIMANT_ACCEPTED_ADMISSION_AND_DEFENDANT_NOT_SIGNED %}
         {{ settlementAgreementSignedByClaimantDefendantClaimDetails(claim) }}
+      {% elif state.status === ClaimStatus.CLAIMANT_ALTERNATIVE_PLAN_WITH_CCJ %}
+        {{ CCJByDeterminationDefendantClaimDetails(claim) }}
       {% elif state.status === ClaimStatus.CLAIMANT_ACCEPTED_COURT_PLAN_SETTLEMENT %}
         {{ settlementAgreementSignedByClaimantNewPaymentPlanDefendantClaimDetails(claim) }}
       {% elif state.status === ClaimStatus.CCJ_REQUESTED %}
