--- a/src/main/features/dashboard/views/macro/claimStatus/claimFullAdmissionForClaimant.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/claimFullAdmissionForClaimant.njk
@@ -34,7 +34,7 @@
       <p>{{ t('You can settle for less than the full claim amount.') }}</p>
       <a href="{{ AppPaths.contactUsPage.uri }}" class="button button-secondary">Tell us you've settled</a>
       <h2 class="heading-small">{{ t('If you haven’t been paid') }}</h2>
-      {% if claim.response.paymentIntention.isPastPaymentDeadline %}
+      {% if claim.eligibleForCCJ %}
         <p>{{ t('If the defendant hasn’t paid you, you can ' + internalLink('request a County Court Judgment', CCJPaths.paidAmountPage.evaluateUri({ externalId: claim.externalId }))
             + '.') | safe }}</p>
       {% else %}
