--- a/src/main/features/claimant-response/views/confirmation.njk
+++ b/src/main/features/claimant-response/views/confirmation.njk
@@ -16,8 +16,8 @@
             {{ t('You’ve proposed an alternative repayment plan') }}
           {% elseif repaymentPlanOrigin === 'COURT' %}
             {{ t('You’ve signed a settlement agreement') }}
-          {% elseif claim.countyCourtJudgmentIssuedAt %}
-            {{ t('County Court Judgment issued') }}
+          {% elseif claim.countyCourtJudgmentRequestedAt %}
+            {{ t('County Court Judgment requested') }}
           {% elseif claim.claimantResponse.type === ClaimantResponseType.REJECTION %}
             {{ t('You’ve rejected their response') }}
           {% elseif claim.claimantResponse.type === ClaimantResponseType.ACCEPTATION %}
@@ -34,9 +34,11 @@
       </div>
 
       <h2 class="heading-medium">{{ t('What happens next') }}</h2>
-      {% if claim.countyCourtJudgmentIssuedAt %}
+      {% if claim.countyCourtJudgmentRequestedAt %}
         {% if paymentIntentionAccepted %}
           <p>{{ t('A County Court Judgment has been requested against the defendant.') }}</p>
+          <p>{{ t('When we’ve processed your request we’ll post a copy of the judgment to you and to {{ defendantName }}.',
+              { defendantName: claim.claimData.defendant.name }) }}</p>
         {% else %}
           <p>{{ t('You’ve rejected the defendant’s repayment plan and a County Court Judgment has been requested against them.') }}</p>
         {% endif %}
